==> krebsbstn/uwb-tracking/firmware/lib/dw3000-port/dw3000_port.cpp <==
#include "dw3000_port.h"
#include "SPI.h"

void spiBegin(uint8_t irq, uint8_t rst)
{
  /*DDR_SPI = _BV(DD_MOSI)|_BV(DD_SCK)|_BV(DD_SS); // Set MOSI, SCK and CS output
  DDR_SPI &= ~_BV(DD_MISO); // make sure MISO is an input
  SPCR0 = _BV(SPE)|_BV(MSTR); // Enable SPI functionality and Master SPI mode
  SPCR0 &= ~_BV(DORD); // set SPI most significant bit first (this is default on ATMEGA328pb)
  */
    // generous initial init/wake-up-idle delay
  delay(5);
  // Configure the IRQ pin as INPUT. Required for correct interrupt setting for ESP8266
      pinMode(irq, INPUT);
  // start SPI
  SPI.begin();
#ifndef ESP8266
//  SPI.usingInterrupt(digitalPinToInterrupt(irq)); // not every board support this, e.g. ESP8266
#endif
  // pin and basic member setup
  _rst        = rst;
  _irq        = irq;
  //_deviceMode = IDLE_MODE;
  // attach interrupt
  //attachInterrupt(_irq, DW1000Class::handleInterrupt, CHANGE); // todo interrupt for ESP8266
  // TODO throw error if pin is not a interrupt pin
  //attachInterrupt(digitalPinToInterrupt(_irq), DW1000Class::handleInterrupt, RISING); // todo interrupt for ESP8266
}

void reselect(uint8_t ss) {
  _ss = ss;
  pinMode(_ss, OUTPUT);
  digitalWrite(_ss, HIGH);
}

void readBytes(byte cmd, uint16_t offset, byte data[], uint16_t n) {
  byte header[3];
  uint8_t headerLen = 1;
  uint16_t i = 0;
  
  // build SPI header
  if(offset == NO_SUB) {
    header[0] = READ | cmd;
  } else {
    header[0] = READ_SUB | cmd;
    if(offset < 128) {
      header[1] = (byte)offset;
      headerLen++;
    } else {
      header[1] = RW_SUB_EXT | (byte)offset;
      header[2] = (byte)(offset >> 7);
      headerLen += 2;
    }
  }
  SPI.beginTransaction(*_currentSPI);
  digitalWrite(_ss, LOW);
  for(i = 0; i < headerLen; i++) {
    SPI.transfer(header[i]); // send header
  }
  for(i = 0; i < n; i++) {
    data[i] = SPI.transfer(JUNK); // read values
  }
  delayMicroseconds(5);
  digitalWrite(_ss, HIGH);
  SPI.endTransaction();
}

void writeBytes(byte cmd, uint16_t offset, byte data[], uint16_t data_size) {
  byte header[3];
  uint8_t  headerLen = 1;
  uint16_t  i = 0;
  
  // TODO proper error handling: address out of bounds
  // build SPI header
  if(offset == NO_SUB) {
    header[0] = WRITE | cmd;
  } else {
    header[0] = WRITE_SUB | cmd;
    if(offset < 128) {
      header[1] = (byte)offset;
      headerLen++;
    } else {
      header[1] = RW_SUB_EXT | (byte)offset;
      header[2] = (byte)(offset >> 7);
      headerLen += 2;
    }
  }
  SPI.beginTransaction(*_currentSPI);
  digitalWrite(_ss, LOW);
  for(i = 0; i < headerLen; i++) {
    SPI.transfer(header[i]); // send header
  }
  for(i = 0; i < data_size; i++) {
    SPI.transfer(data[i]); // write values
  }
  delayMicroseconds(5);
  digitalWrite(_ss, HIGH);
  SPI.endTransaction();
}

void enableClock(byte clock) {
  byte pmscctrl0[LEN_PMSC_CTRL0];
  memset(pmscctrl0, 0, LEN_PMSC_CTRL0);
  readBytes(PMSC, PMSC_CTRL0_SUB, pmscctrl0, LEN_PMSC_CTRL0);
  if(clock == AUTO_CLOCK) {
    _currentSPI = &_fastSPI;
    pmscctrl0[0] = AUTO_CLOCK;
    pmscctrl0[1] &= 0xFE;
  } else if(clock == XTI_CLOCK) {
    _currentSPI = &_slowSPI;
    pmscctrl0[0] &= 0xFC;
    pmscctrl0[0] |= XTI_CLOCK;
  } else if(clock == PLL_CLOCK) {
    _currentSPI = &_fastSPI;
    pmscctrl0[0] &= 0xFC;
    pmscctrl0[0] |= PLL_CLOCK;
  } else {
    // TODO deliver proper warning
  }
  writeBytes(PMSC, PMSC_CTRL0_SUB, pmscctrl0, 2);
}

void reset() {
  if(_rst == 0xff) {
    softReset();
  } else {
    // dw1000 data sheet v2.08 §5.6.1 page 20, the RSTn pin should not be driven high but left floating.
    pinMode(_rst, OUTPUT);
    digitalWrite(_rst, LOW);
    delay(2);  // dw1000 data sheet v2.08 §5.6.1 page 20: nominal 50ns, to be safe take more time
    pinMode(_rst, INPUT);
    delay(10); // dwm1000 data sheet v1.2 page 5: nominal 3 ms, to be safe take more time
    // force into idle mode (although it should be already after reset)
    idle();
  }
}

void spiSelect(uint8_t ss) {
  reselect(ss);
  // try locking clock at PLL speed (should be done already,
  // but just to be sure)
  enableClock(AUTO_CLOCK);
  delay(5);
  // reset chip (either soft or hard)
  if(_rst != 0xff) {
    // dw1000 data sheet v2.08 §5.6.1 page 20, the RSTn pin should not be driven high but left floating.
    pinMode(_rst, INPUT);
  }
  reset();
  // default network and node id
  writeValueToBytes(_networkAndAddress, 0xFF, LEN_PANADR);
  writeNetworkIdAndDeviceAddress();
  // default system configuration
  memset(_syscfg, 0, LEN_SYS_CFG);
  setDoubleBuffering(false);
  setInterruptPolarity(true);
  writeSystemConfigurationRegister();
  // default interrupt mask, i.e. no interrupts
  clearInterrupts();
  writeSystemEventMaskRegister();
  // load LDE micro-code
  enableClock(XTI_CLOCK);
  delay(5);
  manageLDE();
  delay(5);
  enableClock(AUTO_CLOCK);
  delay(5);
  
  // read the temp and vbat readings from OTP that were recorded during production test
  // see 6.3.1 OTP memory map
  byte buf_otp[4];
  readBytesOTP(0x008, buf_otp); // the stored 3.3 V reading
  _vmeas3v3 = buf_otp[0];
  readBytesOTP(0x009, buf_otp); // the stored 23C reading
  _tmeas23C = buf_otp[0];
}

int readfromspi(uint16_t headerLength, uint8_t *headerBuffer, uint16_t readLength, uint8_t *readBuffer)
{

  SPI.beginTransaction(*_currentSPI);
  digitalWrite(_ss, LOW);
  for(int i = 0; i < headerLength; i++) {
    SPI.transfer(headerBuffer[i]); // send header
  }
  for(int i = 0; i < readLength; i++) {
    readBuffer[i] = SPI.transfer(JUNK); // read values
  }
  delayMicroseconds(5);
  digitalWrite(_ss, HIGH);
  SPI.endTransaction();




  
  /*open_spi(); // we first open the SPI line by setting it to low
  for(int i=0; i<headerLength; i++) // write our header bytes to selected chip
  {
    spi_tranceiver(headerBuffer[i]);
  }
  for(int i=0; i<readLength; i++)
  {
    readBuffer[i] = spi_tranceiver(0x00); // store read byte value in the buffer
  
  }
  sleepus(5); // not sure if this is needed?
  close_spi(); // close the SPI line by setting it to high*/
  return 0;
}

int writetospi(uint16_t headerLength, uint8_t *headerBuffer, uint16_t bodyLength, uint8_t *bodyBuffer)
{
  SPI.beginTransaction(*_currentSPI);
  digitalWrite(_ss, LOW);
  for(int i = 0; i < headerLength; i++) {
    SPI.transfer(headerBuffer[i]); // send header
  }
  for(int i = 0; i < bodyLength; i++) {
    SPI.transfer(bodyBuffer[i]); // write values
  }
  delayMicroseconds(5);
  digitalWrite(_ss, HIGH);
  SPI.endTransaction();

  
  /*open_spi(); // we first open the SPI line by setting it to low
  for(int i=0; i<headerLength; i++) // write our header bytes to selected chip
  {
    spi_tranceiver(headerBuffer[i]);  
    
  }
  for(int i=0; i<bodyLength; i++) // write our body data bytes to the selected chip
  {
    spi_tranceiver(bodyBuffer[i]);
    
  }
  sleepus(5); // not sure if this is needed?
  close_spi(); // close the SPI line by setting it to high*/
  return 0;
}

void wakeup_device_with_io() {
    digitalWrite(_ss, LOW);
    delay(2);
    digitalWrite(_ss, HIGH);
    if (_debounceClockEnabled){
            enableDebounceClock();
    }
}

void port_set_dwic_isr(port_dwic_isr_t dwic_isr, uint8_t irq)
{
  pinMode(irq, INPUT_PULLDOWN);
  attachInterrupt(irq, dwic_isr, RISING);
}
